--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <div class="cadrer"><img src="carte.png" id="image" alt="carte des pays" width="700" height="auto"> 
         </div>           
         <div>
-        <p class="cadrer "><span ><input class="button" type="reset"  name="media" value="Init" onclick=annuler(document.qcm)></span></p>
+        <p class="cadrer "><span ><input class="button" type="reset"  name="media" value="Rejouer" onclick=annuler(document.qcm)></span></p>
         <p class="cadrer"><span><input class="button" type="button" name="media" value="Valider" onclick="reponses(document.qcm)"></span></p>
         </div>      
         </form>
